src/pages/HabitsPage/HabitsPage.module.css
.Container {
  width: calc(100% - 32px);
  max-width: 1248px;
  min-height: 863px;

  margin: 39px auto 0;
  padding: 40px;

  background: #fff;
  border-radius: 20px;
}

.Header {
  width: 100%;

  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.HeaderLeft {
  display: flex;
  flex-direction: column;
}

.HeaderLeft h1 {
  margin: 0;

  font-family: Pretendard;
  font-size: 32px;
  font-weight: 800;
  line-height: 100%;
  letter-spacing: 0;

  color: #414141;
}

.HeaderLeft p {
  margin-top: 24px;
  margin-bottom: 8px;

  font-family: Pretendard;
  font-size: 14px;
  font-weight: 400;
  line-height: 100%;

  color: #818181;
}

.HeaderLeft span {
  width: 184px;
  height: 35px;

  padding: 8px 12px;

  border: 1px solid #dddddd;
  border-radius: 50px;

  display: flex;
  align-items: center;
  gap: 8px;

  font-family: Pretendard;
  font-size: 14px;
  font-weight: 400;
  line-height: 100%;

  color: #414141;

  white-space: nowrap;
  box-sizing: border-box;
}

.HeaderRight {
  width: 242px;
  height: 48px;

  display: flex;
  gap: 16px;
}

.HeaderRight button {
  height: 48px;

  border: 1px solid #dddddd;
  border-radius: 12px;

  background: #ffffff;

  font-family: Pretendard;
  font-size: 16px;
  font-weight: 500;
  line-height: 100%;
  letter-spacing: 0;
  text-align: center;

  color: #414141;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 4px;

  cursor: pointer;
}

/* 오늘의 집중 버튼 */
.FocusButton {
  width: 144px;
}

/* 홈 버튼 */
.HomeButton {
  width: 82px;
}

.HeaderRight button img {
  width: 24px;
  height: 24px;

  pointer-events: none;
}

.Content {
  width: 100%;
  min-height: 631px;

  margin-top: 24px;

  padding: 40px 24px;

  border: 1px solid #ddd;
  border-radius: 20px;
}

.ContentHeader {
  position: relative;

  width: 100%;
  height: 29px;

  display: flex;
  justify-content: center;
  align-items: center;
}

.ContentHeader h2 {
  font-family: Pretendard;
  font-size: 20px;
  font-weight: 700;

  color: #414141;
}

.ContentHeader button {
  position: absolute;
  right: calc((100% - 400px) / 2);

  width: 52px;
  height: 17px;

  border: 0;
  background: none;
  padding: 0;

  font-family: Pretendard;
  font-size: 14px;
  font-weight: 500;
  line-height: 100%;
  letter-spacing: 0;
  text-align: center;

  color: #818181;

  cursor: pointer;
}

.HabitList {
  width: 100%;
  margin-top: 32px;

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

.EmptyMessage {
  margin-top: 180px;

  display: flex;
  flex-direction: column;
  align-items: center;

  color: #818181;
}

.EmptyMessage p {
  font-size: 16px;
  font-weight: 700;
}

.EmptyMessage span {
  margin-top: 8px;

  font-size: 14px;
}

.ModalOverlay {
  position: fixed;
  top: 0;
  left: 0;

  width: 100vw;
  height: 100vh;

  background: rgba(0, 0, 0, 0.4);

  display: flex;
  justify-content: center;
  align-items: center;

  z-index: 9999;
}

@media (max-width: 744px) {
  .Container {
    width: calc(100% - 24px);

    padding: 24px 16px;
  }

  .Header {
    flex-direction: column;
    gap: 24px;
  }

  .HeaderRight {
    width: 100%;
    justify-content: flex-end;
  }

  .Content {
    padding: 32px 16px;
  }
}

@media (max-width: 480px) {
  .Container {
    width: calc(100% - 16px);

    margin-top: 16px;
    padding: 20px 12px;

    border-radius: 16px;
  }

  .HeaderLeft h1 {
    font-size: 20px;
  }

  .HeaderLeft span {
    width: 170px;

    font-size: 12px;
  }

  .HeaderRight {
    gap: 8px;
  }

  .FocusButton {
    width: 120px;
  }

  .HomeButton {
    width: 72px;
  }

  .HeaderRight button {
    font-size: 12px;
  }

  .Content {
    min-height: auto;

    padding: 24px 12px;

    border-radius: 16px;
  }

  .ContentHeader h2 {
    font-size: 18px;
  }

  .ContentHeader button {
    right: 0;

    font-size: 11px;
  }

  .HabitList {
    margin-top: 24px;
  }

  .EmptyMessage {
    margin-top: 120px;
  }
}

